chore: spot bug fixes